--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
 	},
 	"require"    : {
 		"php"                : ">=5.5.9",
-		"composer/installers": "~1.6",
 		"filp/whoops"        : "^2.3.1",
-		"pimple/pimple"      : "^3.2.3"
+		"pimple/pimple"      : "^3.2.3",
+		"symfony/var-dumper" : "^5.3"
 	},
 	"autoload" : {
 		"classmap" : ["php/"]
